# capstone-project

./: .env.template  .gitignore  BUILD_COMPLETE.txt  DETAILED_API_ENHANCEMENT.md  ERRORS_FIXED.txt  EVALUATION_GUIDE.md  EVALUATION_REPORT_VIVEK_RAMAGIRI.md  FEATURE_ENHANCEMENT_SUMMARY.txt  FIXES_APPLIED.md  GEN AI CASE STUDY LOAN APPROVAL SYSTEM EVALUATOR PROMPT.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt  verify_setup.py
src/: config.py  decision_engine.py  schemas.py
src/agents/: agent_base.py  applicant_profile_agent.py  compliance_agent.py  financial_risk_agent.py  loan_decision_agent.py
src/api/: main.py  routes.py
src/mcp_servers/: applicant_db_server.py  decision_synthesis_server.py  notification_server.py  risk_rules_server.py
src/orchestration/: state.py  workflow.py
src/ui/: app.py
src/utils/: logger.py  validators.py
tests/: test_workflow.py
