[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loan-approval-ai"
version = "1.0.0"
description = "Multi-Agent Agentic AI System for Intelligent Loan Approval"
requires-python = ">=3.9"
authors = [
    {name = "Capstone Team", email = "team@capstone.local"}
]
license = {text = "MIT"}

dependencies = [
    "anthropic>=0.29.0",
    "langgraph>=0.1.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "streamlit>=1.29.0",
    "fastmcp>=0.1.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
